--- a/src/styles/RecipeCard.module.css
+++ b/src/styles/RecipeCard.module.css
@@ -1,10 +1,10 @@
 .container{
     background-color: #f6f6f6;
-    
-
-
+  
+    margin: 20px;
 }
 .container img{
-    width: 10%;
+    width: 30%;
+    margin-left: 33.33%;
 
 }
