display recipe details no style

--- a/src/styles/RecipeCard.module.css
+++ b/src/styles/RecipeCard.module.css
@@ -1,10 +1,9 @@
 .container{
     background-color: #f6f6f6;
-  
     margin: 20px;
 }
 .container img{
     width: 30%;
     margin-left: 33.33%;
-
+    padding-top :10px;
 }
