--- a/src/styles/RecipeCard.module.css
+++ b/src/styles/RecipeCard.module.css
@@ -2,3 +2,8 @@
     background-color: #f6f6f6;
     margin: 20px;
 }
+.dishtitle{
+    color: #252525;
+    margin-right: 10px;
+    font-weight: 500;
+}
