--- a/src/styles/RecipeCard.module.css
+++ b/src/styles/RecipeCard.module.css
@@ -7,3 +7,11 @@
     margin-right: 10px;
     font-weight: 500;
 }
+.noRecipe{
+    display: flex;
+    color: var(--main-orange);
+    text-align: center;
+    justify-content: center;
+    font-size: 18px;
+    margin-bottom: 30px;
+}
