--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,6 +1,49 @@
 .AboutGrid{
-    margin-top : 100px;
-    margin-bottom : 100px;
+    margin-top : 30px;
+    margin-bottom : 30px;
 
 
 }
+.container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+    color: #333;
+  }
+  
+  .container h2 {
+    font-size: 2.5rem;
+    margin-bottom: 30px;
+    margin-top: 40px;
+    color: #f4612d;
+    text-align: center;
+    font-weight: 530;
+  }
+  
+  .container p {
+    font-size: 1.1rem;
+    line-height: 1.6;
+    margin-bottom: 15px;
+  }
+
+  .emphasize {
+    font-weight: 600;
+    color:#f4612d;
+  }
+  
+  .container p:last-child {
+    margin-bottom: 0;
+  }
+
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f7f7f7;
+    color: #333;
+    line-height: 1.6;
+    padding: 20px;
+  }
+  p {
+    font-size: 16px;
+    margin-bottom: 15px;
+  }
