--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,3 +1,4 @@
+@import '../App.css';
 .AboutGrid{
     margin-top : 30px;
     margin-bottom : 30px;
@@ -9,14 +10,14 @@
     margin: 0 auto;
     padding: 20px;
     font-family: Arial, sans-serif;
-    color: #333;
+    color: var(--main-title-color);
   }
   
   .container h2 {
     font-size: 2.5rem;
     margin-bottom: 30px;
     margin-top: 40px;
-    color: #f4612d;
+    color: var(--main-orange);
     text-align: center;
     font-weight: 530;
   }
@@ -29,7 +30,7 @@
 
   .emphasize {
     font-weight: 600;
-    color:#f4612d;
+    color:var(--main-orange);
   }
   
   .container p:last-child {
@@ -38,8 +39,7 @@
 
   body {
     font-family: Arial, sans-serif;
-    background-color: #f7f7f7;
-    color: #333;
+    background-color: var(--background-light-grey);
     line-height: 1.6;
     padding: 20px;
   }
