--- a/src/styles/RecipeDetails.module.css
+++ b/src/styles/RecipeDetails.module.css
@@ -40,7 +40,8 @@ body{
 }
 
 .generalInfo{
-
+  font-family: Arial, sans-serif;
+  font-size: 1.3rem;
   margin: Opx;
   margin-bottom: 10px;
   padding: 20px;
@@ -77,12 +78,14 @@ body{
 .EditBox{
   display: flex;
   flex-direction: row;
-  justify-content: right;
+  justify-content: space-evenly;
   gap: 20px;
   margin: 20px;
   }
 
 .h2 {
+  align-self: center;
+  padding: 20px;
   color:#f4612d;
   font-size: 30px;
   font-weight: 600;
@@ -94,6 +97,8 @@ flex-direction: row;
 }
 
 .MainboxLeft{
+  display: flex;
+  flex-direction: column;
   padding: 20px;
   width: 70%;
   background-color: var(--background-light-grey);
@@ -102,7 +107,27 @@ flex-direction: row;
   margin-left: 0px;
 }
 
+.recipeImage{
+  max-width: 100%;
+  border-radius: 5px;
+  align-self: center;
+  margin-top: 10px;
+}
+
+.instructions{
+  max-width: 100%;
+  align-self: center;
+  margin: 60px;
+  margin-top: 0px;
+  font-family: Arial, sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.6;
+}
+
+
 .MainboxRight{
+  display: flex;
+  flex-direction: column;
    width: 30%;
 }
 
@@ -119,7 +144,11 @@ list-style: decimal;
 }
 
 .ul {
-list-style: circle; 
+list-style: circle;
+padding-left: 20px; 
+color: #f4612d;
+font-weight: 600;
+line-height: 2;
 }
 
 
