--- a/src/styles/NewRecipeForm.module.css
+++ b/src/styles/NewRecipeForm.module.css
@@ -1,5 +1,14 @@
 @import '../App.css';
 
+.h2 {
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+    margin-top: 30px;
+    color: #f4612d;
+    text-align: center;
+    font-weight: 530;
+  }
+
 .centeredContainer {
     display: flex;
     justify-content: center;
