--- a/src/styles/SearchForm.module.css
+++ b/src/styles/SearchForm.module.css
@@ -58,6 +58,7 @@
 
 .filtersContainer {
     display: flex;
+    flex-direction: column;
     justify-content: space-around;
     width: 100%;
     margin-top: 15px;
@@ -67,6 +68,10 @@
 .diets {
     display: flex;
     flex-direction: column;
+}
+
+.dishTypeFilter{
+    padding-top: 20px;
 }
 
 .searchFormSubmit {
