--- a/src/styles/RecipeCard.module.css
+++ b/src/styles/RecipeCard.module.css
@@ -8,6 +8,7 @@
     color: var(--main-title-color);
     margin-right: 10px;
     font-weight: 500;
+    
 }
 .noRecipe{
     display: flex;
@@ -16,4 +17,7 @@
     justify-content: center;
     font-size: 18px;
     margin-bottom: 30px;
+}
+.badge {
+    margin-right: 3px;
 }
