changed display in search form HP

--- a/src/styles/Buttons.module.css
+++ b/src/styles/Buttons.module.css
@@ -124,6 +124,10 @@
 
 .dishTypeFilter {
   margin-left: 5px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .dishTypeFilter label{
